--- a/client/public/index.html
+++ b/client/public/index.html
@@ -40,4 +40,13 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!--
+    For iframeResizer of parent web page
+    (https://github.com/davidjbradshaw/iframe-resizer)
+  -->
+  <script
+    type="text/javascript"
+    src="%PUBLIC_URL%/iframeResizer.contentWindow.min.js"
+    defer
+  ></script>
 </html>
